1998-12-06  Stefan Taferner  <taferner@kde.org>

	* Added i18n() around label in folder list.

1998-12-03  Stefan Taferner  <taferner@kde.org> (KMail-1.0.8)

	* New messages: added organization to message header
	if given.

	* Headers: position of top message in folder list is
	stored and reused upon next opening. Exception: if there
	is a new or unread message in the folder, then the
	first new/unread message is shown.

	* Composer: fixed missing last character in replies.

	* Composer: attachments are now included in forwards.

1998-11-24  Stefan Taferner  <taferner@kde.org>

	* Pop: does not stop pop retrieval now when pop server does
	not understand LAST command.

1998-11-15  Stefan Taferner  <taferner@kde.org> (KMail-1.0.7)

	* Headers: now current message is not reset when reading mails
	and checking for new messages meanwhile.

	* Pop: added configuration option for leave-mail-on-server.

	* Pop: Fixed problems in pop authentication code.

	* Pop: Enabled POP3 LAST command which was commited to
	kdesupport some time ago.

1998-11-15  Alex Zepeda  <garbanzo@hooked.net>

	* kfontutils.cpp (kfontToStr): Cast two const char *'s to char *'s as
	egcs seems to barf without the casts.

1998-11-10  Harri Porten  <porten@kde.org>

	* Removed hardcoded localkdedir()

	* Let KApplication() do the job of creating ~/.kde/share/config

1998-10-31  Stefan Taferner  <taferner@kde.org> (KMail-1.0.6)

	* Fixed: crash when fetching new mail and inbox folder
	is not accessible.

1998-10-21  Lars Knoll <knoll@mpi-hd.mpg.de>
	* fixed a bug in the support for pgp-2.6

1998-10-08  Stefan Taferner  <taferner@kde.org> (KMail-1.0.5)

	* Sorting messages: replaced sorting algorithm, which caused
	random hangs, with stock qsort -- hopefully working now ;-)

	* Fixed: folder list went out of scope (current item pointing to
	nowhere) when folder was deleted.

	* Composer: fixed broken confirm-close dialog.

	* Increased version to better match upcoming Kde-1.1 release.
